# lab-4-RSZ0

src/resource_core/: CMakeLists.txt
src/resource_core/include/: FileHandle.hpp  ResourceError.hpp  ResourceManager.hpp
src/resource_core/src/: FileHandle.cpp  ResourceError.cpp  ResourceManager.cpp
tests/: tests.cpp
